--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,7 +11,7 @@
         margin: 0 0 1.2vh;
     }
     .btn-primary{
-        font-size:  3.2vw;
+        font-size:  2.7vw;
         margin-bottom: 27vh;
     
     }
@@ -25,7 +25,7 @@
     }
     .container-list {
         width: 70%;
-        margin-bottom: 12vh;
+        margin-bottom: 0;
     }
     .wrapper.w-reverse, .wrapper {
         flex-direction: column-reverse;
@@ -35,6 +35,27 @@
     }
     .logo{
         width: 70%;
+    }
+    
+}
+@media only screen and (max-width: 716px){
+
+    @media (orientation: landscape) {
+        /* body {
+            background-color: red;
+        } */
+        .logo img{
+            width: 60%;
+        }
+        h1.heading{
+            font-size: 4vw;
+        }
+        .btn-primary{
+            font-size: 2vw;
+        }
+        .fixed-content{
+            padding: 0;
+        }
     }
 }
 @media only screen and (max-width: 420px){
@@ -62,11 +83,21 @@
         padding: 0;
         margin: 0;
     }
+    .container-list {
+        width: 70%;
+        margin-bottom: 12vh;
+    }
+    .meta-grid1 {
+        position: static;
+        
+        transform: translateY(0);
+        width: 90%;
+    }
     
 }
 @media only screen and (max-width: 560px){
     .fixed-content{
-        padding: 0.5rem 0;
+        padding: 0;
     }
     .margen{
         margin: 0 1.5rem;
