--- a/css/responsive.css
+++ b/css/responsive.css
@@ -118,3 +118,48 @@
         width: 1.2rem;
     }
 }
+
+.card-list ul li {
+    margin: 0.7rem;
+    
+    color: hsla(0,0%,75.3%,.8);
+    padding: 0 4%;
+}
+.card-list ul{
+    padding: 0;
+    text-align: center;
+}
+.card-item{
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+
+}
+.title-price{
+    margin-top: 2rem;
+}
+.button-container{
+    margin-bottom: 2.2rem;
+    margin-top: 1.3rem;
+}
+.button-container a {
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+    background: black;
+    padding: 0.8rem 2rem;
+    /* border-radius: 0; */
+    margin-top: 2rem;
+    border-radius: 5px;
+}
+
+.text-font{
+    font-size: 3em;
+    margin: 0 0 0.3rem;
+}
+.price-price{
+    display: flex;
+    align-items: flex-end;
+}
+.price-price span{
+    margin: 0 0 0.9rem;
+}
