--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,6 +3,11 @@
 
 */
 
+
+*,::after, ::before {
+    box-sizing: border-box;
+}
+
 @media only screen and (max-width: 769px){
     h1.heading {
         font-size: 5vw;
@@ -162,4 +167,380 @@
 }
 .price-price span{
     margin: 0 0 0.9rem;
+}
+
+
+.swripe-container{
+    height: auto;
+}
+.swripe-wrapper{
+
+    position: relative;
+    width: 100%;
+    box-sizing: content-box;
+}
+.swriper-slide{
+    height: auto;
+}
+.brk-testimonials-dash-one {
+    max-width: 970px;
+    margin: 58px 15px 0;
+    padding-top: 69px;
+    position: relative;
+    text-align: left;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.brk-testimonials-dash-one:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 15px;
+    right: 15px;
+    width: 100%;
+    height: 1px;
+    background: url(../../img/hatch_1.png) repeat-x;
+}
+
+
+.brk-testimonials-dash-one__info {
+    flex-basis: 160px;
+    min-width: 160px;
+    text-align: center;
+    padding-top: 10px;
+}
+@media (max-width: 767px){
+    .brk-testimonials-dash-one__info {
+        flex-basis: 160px;
+        min-width: 160px;
+        padding-top: 0;
+    }
+}
+@media (max-width: 575px){
+    .brk-testimonials-dash-one__info {
+        flex-basis: 100%;
+        min-height: 0;
+    }
+}
+.brk-testimonials-dash-one__description {
+    flex-basis: calc(100% - 215px);
+    font-size: 1rem;
+    line-height: 26px;
+    padding-left: 12px;
+    color: #585858;
+}
+@media (max-width: 767px){
+    .brk-testimonials-dash-one__description {
+        flex-basis: calc(100% - 160px);
+        text-align: center;
+    }
+}
+@media (max-width: 575px){
+    .brk-testimonials-dash-one__description {
+        flex-basis: 100%;
+        margin-top: 15px;
+        padding-left: 0;
+        text-align: center;
+    }
+}
+.font__family-open-sans {
+    font-family: 'Open Sans',sans-serif;
+}
+.text-center {
+    text-align: center!important;
+}
+
+
+.brk-testimonials-dash-one__img {
+    position: absolute;
+    width: 116px;
+    height: 116px;
+    border-radius: 50%;
+    overflow: hidden;
+    top: 0;
+    left: 47px;
+    transform: translateY(-50%);
+}
+@media (max-width: 767px){
+    .brk-testimonials-dash-one__img {
+        position: static;
+        transform: none;
+        margin: 0 auto 15px;
+    }
+}
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+
+
+
+
+
+
+.brk-testimonials-dash-one__info .brk-rating {
+    margin: 0 auto;
+}
+
+.brk-rating {
+    position: relative;
+    width: 89px;
+}
+.brk-testimonials-dash-one__info h4 {
+    font-size: 1rem;
+    line-height: 20px;
+    margin-top: 10px;
+}
+.font__weight-bold {
+    font-weight: 700;
+}
+.font__family-montserrat {
+    font-family: 'Montserrat',sans-serif;
+}
+.brk-rating__layer {
+    opacity: .6;
+}
+.brk-dark-font-color {
+    color: #585858;
+}
+.brk-rating__layer:after, .brk-rating__layer:before {
+    content: " ";
+    display: table;
+}
+.brk-rating__imposition i, .brk-rating__layer i {
+    display: inline-block;
+    float: left;
+    font-size: .875rem;
+    margin: 0 1px;
+}
+
+.fal, .far {
+    font-weight: 600!important;
+}
+
+.brk-rating__imposition {
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.brk-base-font-color {
+    color: blue;
+}
+.brk-rating__imposition:after, .brk-rating__imposition:before {
+    content: " ";
+    display: table;
+}
+.brk-rating__imposition .visible {
+    width: 89px;
+    height: 15px;
+}
+
+.visible {
+    overflow: visible!important;
+}
+.visible {
+    visibility: visible!important;
+}
+.brk-rating__imposition:after {
+    clear: both;
+}
+.brk-rating__imposition:after, .brk-rating__imposition:before {
+    content: " ";
+    display: table;
+}
+.brk-rating__imposition i, .brk-rating__layer i {
+    display: inline-block;
+    float: left;
+    font-size: .875rem;
+    margin: 0 1px;
+}
+
+.fa, .fas {
+    font-weight: 900!important;
+}
+.fa, .fas {
+    font-weight: 900;
+}
+.fa, .far, .fas {
+    font-family: "Font Awesome 5 Free";
+}
+
+.brk-testimonials-dash-one__info {
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+
+
+
+  .fill-purple
+  {
+    background-image: linear-gradient(90deg, #4addff, #a34dfe);
+  }
+  
+  .fill-green
+  {
+    background-image: linear-gradient(90deg, #ffe40c, #33d497);
+  }
+  .fill-ligth-blue{
+    background-image: linear-gradient(90deg, #63cbfb, #140c7a);
+  }
+  .fill-blue
+  {
+    background-image: linear-gradient(90deg, #285ca5, #18d5ff);
+  }
+  
+  .fill-orange
+  {
+    background-image: linear-gradient(90deg, #fcf595, #ff954d);
+  }
+  .fill-red{
+    background-image: linear-gradient(90deg, #b13721, #700505);
+  }
+  .cards
+  {
+    display:flex;
+    flex-direction:row;
+    align-items:center;
+    justify-content:center;
+    position: relative;
+    height:21.875rem;
+    width:100%;
+  }
+  
+  .card
+  {
+    display:flex;
+    width:27.8125rem;
+    height:22rem;
+    border-radius:0.5rem;
+    transform-origin:center center;
+    transform:scale(1) translate(0px,0px) perspective( 750px ) rotateY(0deg);
+    transition-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
+    transition-duration: 0.5s;
+    position:absolute;
+    top:0;
+    box-shadow:0 30px 50px rgba(0,0,0,0.1);
+    z-index:3;
+    margin-top: 6rem;
+    cursor: pointer;
+    overflow:hidden;
+  }
+  
+  .card *
+  {
+    pointer-events: none;
+  }
+  
+  .card--left
+  {
+    transform:scale(0.75) translate(-335px,0px) perspective( 750px ) rotateY(10deg);
+    box-shadow:0 15px 25px rgba(0,0,0,0.1);
+    z-index:1;
+  }
+  
+  .card--center
+  {
+    transform:scale(1) translate(0px, 0px) perspective( 750px ) rotateY(0deg);
+    box-shadow:0 30px 50px rgba(0,0,0,0.1);
+    z-index:3;
+  }
+  
+  .card--right
+  {
+    transform:scale(0.75) translate(335px,0px) perspective( 750px ) rotateY(-10deg);
+    box-shadow:0 15px 25px rgba(0,0,0,0.1);
+    z-index:1;
+  }
+  
+  .card__icon
+  {
+    width:30%;
+    height:100%;
+    background-color:#000;
+    /* background:rgba(255,255,255,0.5); */
+    position:relative;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .card__icon:before
+  {
+    content:attr(data-icon);
+    font-size:3rem;
+    position:absolute;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    width:110px;
+    height:110px;
+    border-radius: 50%;
+    background: rgb(255, 255, 255);
+    color: #000;
+  }
+  .card__icon:after{
+      content: "Bs";
+      position: relative;
+      left: 2.5rem;
+      top: -0.6rem;
+      color: #000;
+  }
+  
+  .card__detail
+  {
+    flex:1;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  
+  @media only screen and (max-width : 736px)
+  {
+    .cards
+    {
+      flex-direction:column;
+      margin:auto 0;
+    }
+  
+    .card
+    {
+      display:flex;
+      width:90%;
+    }
+  
+    .card--left
+    {
+      transform:scale(0.75) translate(0px, -150px) perspective(750px) rotateY(0) rotateX(-10deg) translateZ(-5px);
+    }
+  
+    .card--center
+    {
+      transform:scale(1) translate(0px, 0px) perspective( 750px ) rotateY(0deg)  rotateX(0deg) translateZ(5px);
+    }
+  
+    .card--right
+    {
+      transform:scale(0.75) translate(0px, 150px) perspective(750px) rotateY(0) rotateX(10deg) translateZ(-5px);
+    }
+  
+    .card__icon:before
+    {
+      transform:scale(0.75);
+    }
+  }
+  .title_paquetes{
+      position: absolute;
+      top: 0;
+  }
+
+
+  section.lines.back-black {
+    margin-top: 12rem;
 }
